HW 6 getAllCopy refactoring